[package]
name = "cuda-learning"
version = "0.1.0"
edition = "2021"
description = "Experience-based learning — credit assignment, curriculum, lesson extraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-learning"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
